# open-build-project

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.venv-m1/: pyvenv.cfg
.venv-m1/Scripts/: activate  activate.bat
.venv-m3/: pyvenv.cfg
.venv-m3/Scripts/: activate  activate.bat
demo/: aurora-landing.html  ops-dashboard.html
deployment/: kubernetes.yaml  railway.md
docs/: BUILD_WEEK_DEMO_SCRIPT.md  BUILD_WEEK_SUBMISSION.md
scripts/: render_demo_screenshots.py  verify_hosted_mcp.py
src/: main.py
src/inspo_mcp/: __init__.py  config.py  production.py  prompts.py  schemas.py  server.py
src/inspo_mcp/models/: __init__.py  run.py  source.py
src/inspo_mcp/observability/: __init__.py  context.py  logging.py  middleware.py  telemetry.py
src/inspo_mcp/repositories/: __init__.py  kits.py  runs.py  site_analyses.py  sources.py  vision_analyses.py
src/inspo_mcp/schemas/: __init__.py  run_status.py  site_analysis.py  vision_analysis.py
src/inspo_mcp/services/: __init__.py  capture.py  component_codegen.py  extract.py  hosted_demo.py  kit_generator.py  mock_artifacts.py  privacy.py  run_manager.py  url_safety.py  vision.py
src/inspo_mcp/tools/: __init__.py  (+3 more)
test-scr/: pyvenv.cfg
test-scr/Scripts/: activate  activate.bat
tests/: test_capture.py  test_component_codegen.py  test_extract.py  test_hosted_demo.py  test_kit_generator.py  test_privacy.py  test_production.py  test_retrieval.py  test_run_manager.py  test_schemas.py  test_server.py  test_url_safety.py  test_vision.py
(+3 files in other folders)
