[project]
name = "inspo-mcp"
version = "0.1.0"
description = "Turn UI inspiration URLs into reusable, build-ready design artifacts."
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "pydantic>=2.0",
    "httpx>=0.27",
    "playwright>=1.50",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
