[project]
name = "inspo-mcp"
version = "0.1.0"
description = "Turn UI inspiration screenshots and public URLs into reusable, build-ready design artifacts."
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "pydantic>=2.0",
    "httpx>=0.27",
    "playwright>=1.50",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "opentelemetry-api>=1.30,<2.0",
    "opentelemetry-sdk>=1.30,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30,<2.0",
    "pillow>=10.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
